// file: proto/gcommon/v1/common/messages/health_config.proto
// version: 1.0.0
// guid: ebed5c7e-06be-4527-8d87-41afd0b1320d
edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/common";

/**
 * HealthConfig represents health configuration
 */
message HealthConfig {
  // Whether health checking is enabled
  bool enabled = 1;
  // Health endpoint path
  string endpoint = 2;
  // Liveness check path
  string liveness_path = 3;
  // Readiness check path
  string readiness_path = 4;
  // Startup check path
  string startup_path = 5;
  // Check timeout in seconds
  int32 timeout_seconds = 6;
  // Check interval in seconds
  int32 interval_seconds = 7;
  // Grace period in seconds
  int32 grace_period_seconds = 8;
  // Number of retries
  int32 retries = 9;
}
